feat: add images and update asins, profile and settings pages

--- a/user-guide/account-management.mdx
+++ b/user-guide/account-management.mdx
@@ -6,7 +6,7 @@ description: 'The Account Management section allows you to configure your Alerti
 ## Account Settings
 
 <Frame>
-  <img src="/images/account-settings.png" alt="Account Settings" />
+  <img src="/images/settings.png" alt="Account Settings" />
 </Frame>
 
 The Account Settings page provides access to all your personal account configuration options.
@@ -46,7 +46,7 @@ The Account Settings page provides access to all your personal account configura
 ## Amazon Seller Account Connection
 
 <Frame>
-  <img src="/images/amazon-connection-settings.png" alt="Amazon Connection Settings" />
+  <img src="/images/amazon-connect.png" alt="Amazon Connection Settings" />
 </Frame>
 
 Manage your connection to Amazon Seller Central to ensure Alertix can properly monitor your listings.
