--- a/user-guide/alert-dashboard.mdx
+++ b/user-guide/alert-dashboard.mdx
@@ -10,7 +10,7 @@ The Alert Dashboard is your central hub for monitoring and managing all notifica
 ## Alerts Overview
 
 <Frame>
-  <img src="/images/alerts-overview.png" alt="Alerts Overview" />
+  <img src="/images/main-dashboard.png" alt="Alerts Overview" />
 </Frame>
 
 The Alerts Overview provides a comprehensive view of all notifications across your monitored ASINs.
