--- a/user-guide/alert-preferences.mdx
+++ b/user-guide/alert-preferences.mdx
@@ -10,7 +10,7 @@ Alertix allows you to customize exactly which types of alerts you want to receiv
 ## General Alert Preferences
 
 <Frame>
-  <img src="/images/alert-preferences-detail.png" alt="Alert Preferences Detail" />
+  <img src="/images/alert-pref.png" alt="Alert Preferences Detail" />
 </Frame>
 
 The Alert Preferences section lets you configure global settings that apply to all your monitored ASINs by default.
@@ -80,7 +80,7 @@ The Alert Preferences section lets you configure global settings that apply to a
 ## ASIN-Specific Alert Preferences
 
 <Frame>
-  <img src="/images/asin-details.png" alt="ASIN Details" />
+  <img src="/images/alert-preferences.png" alt="ASIN Details" />
 </Frame>
 
 For more granular control, Alertix allows you to configure alert preferences for individual ASINs, overriding your global settings.
