feat: update documentation and add images

--- a/user-guide/asin-dashboard.mdx
+++ b/user-guide/asin-dashboard.mdx
@@ -3,8 +3,6 @@ title: "ASIN Dashboard"
 description: "Manage and monitor your Amazon product ASINs in one place"
 ---
 
-# ASIN Dashboard
-
 The ASIN Dashboard serves as your central command center for managing all your Amazon product ASINs. This intuitive interface allows you to add, monitor, and organize your product catalog while providing insights into each product's performance and alert history.
 
 ## Dashboard Overview
@@ -17,17 +15,17 @@ The ASIN Dashboard provides a comprehensive view of all your monitored Amazon pr
 
 ### Dashboard Components
 
-<CardGroup cols={2}>
-  <Card title="ASIN Summary" icon="box">
-    - Total monitored ASINs - Active vs. inactive ASINs - ASINs with recent
-    alerts - Usage statistics (used/available slots)
-  </Card>
+**ASIN Summary:**
+- Total monitored ASINs
+- Active vs. inactive ASINs
+- ASINs with recent alerts
+- Usage statistics (used/available slots)
 
-  <Card title="Filtering Options" icon="filter">
-    - Filter by status (active/inactive) - Filter by alert count - Search by
-    ASIN or product title - Sort by date added, alerts, or title
-  </Card>
-</CardGroup>
+**Filtering Options:**
+- Filter by status (active/inactive)
+- Filter by alert count
+- Search by ASIN or product title
+- Sort by date added, alerts, or title
 
 ### ASIN Status Indicators
 
