--- a/user-guide/asin-management.mdx
+++ b/user-guide/asin-management.mdx
@@ -3,8 +3,6 @@ title: "ASIN Management"
 description: "Add, monitor, and manage your Amazon product ASINs"
 ---
 
-# ASIN Management
-
 The ASIN Management section allows you to add, monitor, and manage all your Amazon product listings in one centralized location.
 
 ## Monitored ASINs Dashboard
@@ -27,16 +25,17 @@ The Monitored ASINs dashboard serves as your central hub for managing all produc
 
 Each monitored ASIN is displayed as a card containing:
 
-<CardGroup cols={2}>
-  <Card title="Visual Elements">
-    - Product image - Product title (truncated if too long) - ASIN code (e.g.,
-    B0D94YLWJ6) - Status indicator ("Active" or "Inactive")
-  </Card>
-  <Card title="Alert Information">
-    - New alert count - In-progress alert count - Historical alert data - "View
-    Details" button for accessing ASIN-specific information
-  </Card>
-</CardGroup>
+**Visual Elements:**
+- Product image
+- Product title (truncated if too long)
+- ASIN code (e.g., B0D94YLWJ6)
+- Status indicator ("Active" or "Inactive")
+
+**Alert Information:**
+- New alert count
+- In-progress alert count
+- Historical alert data
+- "View Details" button for accessing ASIN-specific information
 
 <Tip>
   Hover over a truncated product title to see the full name in a tooltip.
@@ -101,27 +100,29 @@ Clicking "View Details" on any ASIN card opens the detailed view for that specif
 
 ### Available Information
 
-<AccordionGroup>
-  <Accordion title="Product Information">
-    - Full product title - ASIN code - Product description - Current Amazon
-    listing URL - Product image - Category information
-  </Accordion>
+**Product Information:**
+- Full product title
+- ASIN code
+- Product description
+- Current Amazon listing URL
+- Product image
+- Category information
 
-  <Accordion title="Monitoring Status">
-    - Active/Inactive status - Monitoring start date - Last checked timestamp -
-    Alert history timeline
-  </Accordion>
+**Monitoring Status:**
+- Active/Inactive status
+- Monitoring start date
+- Last checked timestamp
+- Alert history timeline
 
-  <Accordion title="Alert Preferences">
-    - ASIN-specific alert settings - Override toggles for global preferences -
-    Custom notification settings
-  </Accordion>
+**Alert Preferences:**
+- ASIN-specific alert settings
+- Override toggles for global preferences
+- Custom notification settings
 
-  <Accordion title="Performance Metrics">
-    - Alert frequency over time - Common alert types for this product -
-    Comparative data with similar ASINs
-  </Accordion>
-</AccordionGroup>
+**Performance Metrics:**
+- Alert frequency over time
+- Common alert types for this product
+- Comparative data with similar ASINs
 
 ### Actions Available
 
