--- a/user-guide/dashboard.mdx
+++ b/user-guide/dashboard.mdx
@@ -23,15 +23,6 @@ The main dashboard provides a comprehensive overview of your monitored ASINs and
     - **Performance Summary**: Quick view of listing health and status
   </Tab>
   
-  <Tab title="Quick Actions">
-    The Quick Actions panel provides shortcuts to common tasks:
-    
-    - **Add ASINs**: Upload new products for monitoring
-    - **Configure Alerts**: Adjust your alert preferences
-    - **View Reports**: Access detailed analytics and reports
-    - **Account Settings**: Manage your account configuration
-  </Tab>
-  
   <Tab title="Notifications">
     The Notifications center shows your most recent alerts:
     
@@ -46,12 +37,10 @@ The main dashboard provides a comprehensive overview of your monitored ASINs and
 
 The main dashboard includes a navigation sidebar that provides access to all major sections of the platform:
 
-- **Dashboard**: Return to the main overview
 - **ASINs**: Manage your monitored products
 - **Alerts**: View and manage all notifications
-- **Preferences**: Configure alert settings
-- **Account**: Access account management options
-- **Support**: Get help and contact customer service
+- **Settings**: Configure alert settings
+- **Profile**: Access account management options
 
 <Tip>
   You can customize your dashboard layout and which metrics are displayed by clicking the "Customize" button in the top-right corner.
