--- a/user-guide/alert-dashboard.mdx
+++ b/user-guide/alert-dashboard.mdx
@@ -3,8 +3,6 @@ title: 'Alert Dashboard'
 description: 'Monitor and manage alerts for your Amazon listings'
 ---
 
-# Alert Dashboard
-
 The Alert Dashboard is your central hub for monitoring and managing all notifications about changes to your Amazon listings. This powerful interface helps you stay on top of important updates and take action when needed.
 
 ## Alerts Overview
@@ -51,7 +49,7 @@ Alertix categorizes notifications by priority to help you focus on the most crit
 ## Alert Details
 
 <Frame>
-  <img src="/images/alert-details.png" alt="Alert Details" />
+  <img src="/images/asin-detail.png" alt="Alert Details" />
 </Frame>
 
 Clicking on any alert opens a detailed view with comprehensive information about the change.
@@ -72,14 +70,6 @@ Clicking on any alert opens a detailed view with comprehensive information about
     - Product title and image
     - Current Amazon listing status
     - Historical alert patterns for this product
-  </Tab>
-  
-  <Tab title="Action Center">
-    - Mark as in progress
-    - Resolve alert
-    - Add notes
-    - Assign to team member (Business/Enterprise plans)
-    - Set follow-up reminder
   </Tab>
 </Tabs>
 
