update: remove analytics section

--- a/user-guide/account-management.mdx
+++ b/user-guide/account-management.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Account Management'
-description: 'The Account Management section allows you to configure your Alertix account settings, manage your Amazon seller connections, and update your personal information.'
+title: "Account Management"
+description: "The Account Management section allows you to configure your Alertix account settings, manage your Amazon seller connections, and update your personal information."
 ---
 
 ## Account Settings
@@ -15,32 +15,25 @@ The Account Settings page provides access to all your personal account configura
 
 <AccordionGroup>
   <Accordion title="Profile Settings">
-    - Update your name
-    - Change your email address
-    - Modify your password
-    - Set your time zone
-    - Configure language preferences
+    - Update your name - Change your email address - Modify your password - Set
+    your time zone - Configure language preferences
   </Accordion>
-  
+
   <Accordion title="Security Settings">
-    - Enable/disable two-factor authentication
-    - View active sessions
-    - Manage connected devices
-    - Set up security questions
-    - Review account activity logs
+    - Enable/disable two-factor authentication - View active sessions - Manage
+    connected devices - Set up security questions - Review account activity logs
   </Accordion>
-  
+
   <Accordion title="Notification Preferences">
-    - Configure email notification frequency
-    - Enable/disable mobile push notifications
-    - Set up SMS alerts for critical changes
-    - Customize notification digest settings
-    - Configure quiet hours
+    - Configure email notification frequency - Enable/disable mobile push
+    notifications - Set up SMS alerts for critical changes - Customize
+    notification digest settings - Configure quiet hours
   </Accordion>
 </AccordionGroup>
 
 <Warning>
-  Changing your email address will require verification of the new address before the change takes effect.
+  Changing your email address will require verification of the new address
+  before the change takes effect.
 </Warning>
 
 ## Amazon Seller Account Connection
@@ -58,13 +51,16 @@ Manage your connection to Amazon Seller Central to ensure Alertix can properly m
     See your currently connected Amazon Seller ID and associated brand name.
   </Step>
   <Step title="Update Connection">
-    Update your Amazon Seller ID if it has changed or if you need to monitor a different account.
+    Update your Amazon Seller ID if it has changed or if you need to monitor a
+    different account.
   </Step>
   <Step title="Add Additional Accounts">
-    Connect multiple Amazon Seller accounts if you operate across different regions or brands (available on Business and Enterprise plans).
+    Connect multiple Amazon Seller accounts if you operate across different
+    regions or brands (available on Business and Enterprise plans).
   </Step>
   <Step title="Verify Connection">
-    Test your connection to ensure Alertix can properly access your listing data.
+    Test your connection to ensure Alertix can properly access your listing
+    data.
   </Step>
 </Steps>
 
@@ -77,116 +73,8 @@ If you need help finding your Amazon Seller ID:
 3. Your Seller ID is listed under "Business Information"
 
 <Info>
-  For optimal monitoring, ensure your Amazon Seller ID is correctly entered and that you've provided the primary brand name associated with your account.
-</Info>
-
-## Subscription Management
-
-<Frame>
-  <img src="/images/subscription-management.png" alt="Subscription Management" />
-</Frame>
-
-Manage your Alertix subscription plan, billing information, and payment history.
-
-### Plan Information
-
-<CardGroup cols={2}>
-  <Card title="Current Plan" icon="crown">
-    - Plan name and tier
-    - Monthly/annual billing cycle
-    - ASIN monitoring limit
-    - Feature access
-    - Renewal date
-  </Card>
-  
-  <Card title="Billing Details" icon="credit-card">
-    - Payment method
-    - Billing address
-    - Invoice history
-    - Receipt downloads
-    - Tax information
-  </Card>
-</CardGroup>
-
-### Plan Management
-
-<Tabs>
-  <Tab title="Upgrade Plan">
-    <Steps>
-      <Step title="Compare Plans">
-        Review available plans and their features to find the best fit for your business.
-      </Step>
-      <Step title="Select New Plan">
-        Choose the plan that meets your needs based on ASIN count and feature requirements.
-      </Step>
-      <Step title="Confirm Billing Changes">
-        Review the prorated charges or credits for your billing cycle.
-      </Step>
-      <Step title="Complete Upgrade">
-        Confirm your selection to immediately upgrade your account.
-      </Step>
-    </Steps>
-  </Tab>
-  
-  <Tab title="Downgrade Plan">
-    <Steps>
-      <Step title="Review Limitations">
-        Understand what features or ASIN capacity you'll lose by downgrading.
-      </Step>
-      <Step title="Select New Plan">
-        Choose which lower-tier plan you want to switch to.
-      </Step>
-      <Step title="Confirm Changes">
-        Acknowledge any potential data loss or feature restrictions.
-      </Step>
-      <Step title="Schedule Downgrade">
-        Your plan will change at the end of your current billing cycle.
-      </Step>
-    </Steps>
-  </Tab>
-</Tabs>
-
-<Warning>
-  Downgrading your plan may result in the loss of monitoring capacity if you exceed the ASIN limit of your new plan. You'll need to remove excess ASINs before the downgrade takes effect.
-</Warning>
-
-## Team Management
-
-<Frame>
-  <img src="/images/team-management.png" alt="Team Management" />
-</Frame>
-
-Business and Enterprise plans include team collaboration features to help you manage Alertix across your organization.
-
-### Team Features
-
-<AccordionGroup>
-  <Accordion title="User Management">
-    - Add team members
-    - Assign user roles and permissions
-    - Deactivate user accounts
-    - Transfer ownership
-    - Monitor user activity
-  </Accordion>
-  
-  <Accordion title="Role Configuration">
-    - Admin: Full system access
-    - Manager: Alert management and ASIN configuration
-    - Analyst: View-only access to alerts and reports
-    - Custom: Tailored permission sets
-  </Accordion>
-  
-  <Accordion title="Collaboration Tools">
-    - Alert assignments
-    - Internal commenting
-    - Shared dashboards
-    - Activity logs
-    - Notification routing
-  </Accordion>
-</AccordionGroup>
-
-<Info>
-  Team management features are only available on Business and Enterprise plans. Upgrade your subscription to access these collaboration tools.
+  For optimal monitoring, ensure your Amazon Seller ID is correctly entered and
+  that you've provided the primary brand name associated with your account.
 </Info>
 
 ## Account Deletion
@@ -195,7 +83,8 @@ If you need to delete your Alertix account:
 
 <Steps>
   <Step title="Export Your Data">
-    Before deletion, download any important data you want to keep, including alert history and ASIN information.
+    Before deletion, download any important data you want to keep, including
+    alert history and ASIN information.
   </Step>
   <Step title="Cancel Subscription">
     Ensure your subscription is canceled to prevent future billing.
@@ -204,10 +93,13 @@ If you need to delete your Alertix account:
     Contact support or use the "Delete Account" option in Account Settings.
   </Step>
   <Step title="Confirm Deletion">
-    Verify your identity and confirm that you understand all data will be permanently removed.
+    Verify your identity and confirm that you understand all data will be
+    permanently removed.
   </Step>
 </Steps>
 
 <Warning>
-  Account deletion is permanent and cannot be undone. All your data, including alert history and ASIN configurations, will be permanently removed from our systems.
+  Account deletion is permanent and cannot be undone. All your data, including
+  alert history and ASIN configurations, will be permanently removed from our
+  systems.
 </Warning>
